Update demo for debug module refactoring
- Add stm32zero-debug.cpp to CMakeLists.txt
- Add STM32ZERO_DEBUG_UART to stm32zero-conf.h
- Remove debug macros from test file
- Update STM32ZERO submodule

--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/CMakeLists.txt
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/CMakeLists.txt
@@ -46,6 +46,8 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
+    # STM32ZERO library sources
+    ${CMAKE_CURRENT_SOURCE_DIR}/../STM32ZERO/src/stm32zero-debug.cpp
     # Shared Main sources
     ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/test_stm32zero.cpp
 )
