Add comprehensive test suite for STM32ZERO library
Test files:
- test_stm32zero.cpp: Extended compile-time tests (static_assert)
- test_runner.cpp: Runtime test executor with [PASS]/[FAIL] output
- test_core.cpp: DmaBuffer, CriticalSection, is_in_isr() tests
- test_sio.cpp: Serial I/O read/write/readln tests
- test_freertos.cpp: StaticTask, Queue, Mutex, Semaphore tests
- test_ustim.cpp: Microsecond timer precision tests

Compile-time tests verify:
- dimof() for 1D/2D/3D arrays
- is_power_of_2() true/false cases
- align_up<N>() boundary alignment
- cache_align() cache line alignment
- DmaBuffer size()/aligned_size()
- StaticTask stack_words()/stack_bytes()
- StaticQueue item_size()/length()
- Priority enum conversion

Runtime tests output via USART3 (115200 baud)

--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/CMakeLists.txt
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/CMakeLists.txt
@@ -53,6 +53,12 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Shared Main sources
     ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/app_init.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/test_stm32zero.cpp
+    # Test suite
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/test_runner.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/test_core.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/test_sio.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/test_freertos.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Main/Src/test_ustim.cpp
 )
 
 # Add include paths
