feat: integrate assert module and update SIO config
- Add stm32zero-assert.c to CMakeLists.txt for both boards
- Update stm32zero-conf.h to use STM32ZERO_SIO_NUM instead of
  STM32ZERO_SIO_UART (API change for register-based assert output)

--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/CMakeLists.txt
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/CMakeLists.txt
@@ -47,6 +47,7 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # STM32ZERO library sources
+    ${CMAKE_CURRENT_SOURCE_DIR}/../STM32ZERO/src/stm32zero-assert.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../STM32ZERO/src/stm32zero-sio.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../STM32ZERO/src/stm32zero-uart.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../STM32ZERO/src/stm32zero-fdcan.cpp
